# rust_embedded

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs
.cargo/: config
allocator/: Cargo.toml
allocator/src/: lib.rs
boot/: Cargo.toml  core.S  stm32f446.ld  vector_table.S
hal/: Cargo.toml
hal/.cargo/: config
hal/src/: lib.rs  register.rs
hal/src/flash/: mod.rs
hal/src/gpio/: mod.rs  raw.rs
hal/src/i2c/: raw.rs
hal/src/nvic/: mod.rs
hal/src/rcc/: mod.rs  raw.rs
hal/src/timer/: mod.rs  timer_handlers.rs
hal/src/usart/: mod.rs  raw.rs  usart_handlers.rs
hal_alloc/: Cargo.toml
hal_alloc/src/: lib.rs
interpreter/: Cargo.toml
kernel/: Cargo.toml
kernel/src/: lib.rs  swi.rs  task.rs
kernel/src/net/: at.rs  mod.rs  tcp.rs  wifi.rs
kernel/src/swi/: mod.rs  swi.S
kernel/src/task/: mod.rs  task.rs
src/: main.rs  panic_handler.rs  register.rs
src/gpio/: mod.rs
src/hal/: mod.rs
src/hal/gpio/: mod.rs
src/hal/rcc/: raw.rs
src/hal/usart/: mod.rs
src/kernel/: alloc.rs  mod.rs  string.rs  vec.rs
src/kernel/net/: at.rs  mod.rs  tcp.rs
src/mmu/: mod.rs
src/nvic/: mod.rs
src/rcc/: mod.rs  raw.rs
src/timer/: mod.rs  raw.rs  timer_handlers.rs
src/usart/: mod.rs  raw.rs
startup/: Cargo.toml
startup/src/: lib.rs  register.rs
startup/src/gpio/: gpio_config.rs  mod.rs
startup/src/nvic/: mod.rs
startup/src/timer/: mod.rs  timer_config.rs  timer_handlers.rs
test_interpreter/: Cargo.toml  test  test.nc  test.nsc
test_interpreter/.cargo/: config
test_interpreter/src/: interpreter.rs  main.rs
(+10 files in other folders)
