[package]
name = "arm"
version = "0.1.0"
authors = ["olivier"]
edition = "2018"

[dependencies]
hal = { path = "hal" }
allocator = { path = "allocator" }
kernel = { path = "kernel" }
hal_alloc = { path = "hal_alloc" }

[profile.dev]
opt-level = 0
debug = true
panic = 'abort'
rpath = false
lto = false